@@ -1,4 +1,5 @@
 0.5.0
+ - Implemented ThreadStorm#clear_finished.
  - Implemented the :execute_blocks option.
  
 0.4.0
